src/objects/pmmatest__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PMMA</relationshipLabel>
        <relationshipName>PMMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1_del__c</fullName>
        <label>序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>PMMA</relationshipLabel>
        <relationshipName>PMMA_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>certificatetime__c</fullName>
        <label>测试时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>PMMA结果</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>servicerequest__c</fullName>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>PMMA</relationshipLabel>
        <relationshipName>PMMA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>进行中</fullName>
                    <default>true</default>
                    <label>进行中</label>
                </value>
                <value>
                    <fullName>关闭</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PMMA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field1__c</columns>
        <columns>Field1_del__c</columns>
        <columns>servicerequest__c</columns>
        <columns>certificatetime__c</columns>
        <columns>result__c</columns>
        <columns>state__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>PMMA-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMMA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>